[package]
name = "reversi"
version = "0.1.0"
edition = "2021"
 
[[bin]]
name = "kk"
path = "src/kk/bin/main.rs"

[[bin]]
name = "gamegen"
path = "src/gen/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.8.5"
mcts = "0.3.0"
wthor = "0.5"
paste = "*"
clap = { version = "4.3.19", features = ["derive"] }
